fix: final spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -718,7 +718,10 @@ header {
                     font-size: $font30px;
                 }
                 &:nth-of-type(2) {
-                    margin-bottom: 7.188rem;
+                    margin-bottom: 4.438rem;
+                    @include lg {
+                        margin-bottom: 7.188rem;
+                    }
                 }
             }
         }
